Fixed bug where mailchimp form was overlaying other forms due to div positioning. Also decresed width of email textbox as it caused the button to wrap to next line in Chrome

--- a/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.css
+++ b/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.css
@@ -1719,7 +1719,7 @@ li.sub-menu-active > a,
 #mc_embed_signup #newsletter-subscribe-block input.email {
 	padding: 11px;
 	border-radius: 5px;
-	width: 460px;
+	width: 430px;
 	background: #F1F1F1;
 	border: 1px solid #E7E7E7;
 	font-size: 14px;
